@@ -20,6 +20,8 @@ JFwknop - 1.2.0
       holder, github link, version.
     * The first key set in access file is the "SOURCE" key in order to comply with
       fwknop server parsing.
+    * GPG keys are now 2048 bit long rather than 1024. Moreover, JFwknop creates
+      GPG V1 keys and import them in GPG V2 keyring using installed gpg binary.
 
 JFwknop - 1.1.0 - 02/10/2016
 
